Day12 has been completed

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,5 @@
-serenity_project_name=EU8_API_RREPORT
-serenity_test_root=eu8
+serenity.project.name=Burak API Report
+serenity.test.root=eu8
+
+spartan.editor.username=editor
+spartan.editor.password=editor
